@@ -3,6 +3,87 @@
 
 {% block content_title %}<h2>{% trans "Statistics" %}</h2>{% endblock %}
 
+{% block extrahead %}{{block.super}}
+
+{% if registrations_axis %}
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js" type="text/javascript"></script>
+<script src="{{ MEDIA_URL }}js/highcharts/highcharts.js" type="text/javascript"></script>
+<script src="{{ MEDIA_URL }}js/highcharts/excanvas.compiled.js" type="text/javascript"></script>
+
+<script type="text/javascript">
+
+$(document).ready(function() {
+
+var registrationchart = new Highcharts.Chart({
+   chart: {
+      renderTo: 'registrationchart',
+      defaultSeriesType: 'line',
+      margin: [50, 150, 60, 80]
+   },
+   title: {
+      text: 'Registreringer',
+      style: {
+         margin: '10px 100px 0 0' // center it
+      }
+   },
+   xAxis: {
+      categories: {{registrations_axis|safe}},
+      title: {
+         text: 'Uge'
+      },
+      labels: {
+         rotation: 45,
+         align: 'right',
+      }
+   },
+   yAxis: {
+      title: {
+         text: 'Antal'
+      },
+      plotLines: [{
+         value: 0,
+         width: 1,
+         color: '#808080'
+      }]
+   },
+   tooltip: {
+      formatter: function() {
+                return '<b>Uge</b> ' + this.x + '<br><b>Antal</b> ' + this.y;
+      }
+   },
+   legend: {
+      layout: 'vertical',
+      style: {
+         left: 'auto',
+         bottom: 'auto',
+         right: '10px',
+         top: '100px'
+      }
+   },
+   series: [{
+      name: 'Tilmeldt',
+      data: {{registrations_data|safe}}
+   },
+   {
+      name: 'Tilmeldt (akk.)',
+      data: {{registrations_data_acc|safe}}
+   },
+   {
+      name: 'Godkendt',
+      data: {{accepted_data|safe}}
+   },
+   {
+      name: 'Godkendt (akk.)',
+      data: {{accepted_data_acc|safe}}
+   }]
+});
+
+});
+</script>
+{% endif %}
+
+{% endblock %}
+
 {% block content %}
 
 <div class="block">
@@ -34,6 +115,15 @@
 </table>
 
 </div>
+
+{% if registrations_axis %}
+<div class="block">
+
+   <div id="registrationchart" style="width:800px; height: 400px;"></div>
+
+</div>
+{% endif %}
+
 <div class="block">
 
 <h3>Betalinger</h3>
@@ -60,6 +150,7 @@
 </table>
 
 </div>
+
 <div class="block">
 
 <h3>Tilvalg</h3>
@@ -93,5 +184,5 @@
    </table>
 
 </div>
-   
+
 {% endblock %}
