@@ -1,5 +1,7 @@
 6.1.0
  * New login screen
+ * New link directly from the event list to attendee list
+ * Added graph of registrations to event statistics
 
 6.0.0
  * Various usability improvements
